# MCP-Server

./: .gitignore  README.md  calculator.py  categories.json  client1.py  demo.py  main.py  proxy.py  pyproject.toml  time_tracker.db
