[project]
name = "time-focus-tracker-mcp"
version = "1.0.0"
description = "A professional MCP server for tracking time spent on activities with comprehensive analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.2",
]
authors = [
    { name = "Time Focus Tracker" }
]
keywords = ["mcp", "time-tracking", "productivity", "focus", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/time-focus-tracker-mcp"
Repository = "https://github.com/yourusername/time-focus-tracker-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
